--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "i18next": "^23.11.5",
+    "react-i18next": "^15.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
